# Tanin

./: Cargo.toml  README.md  hello_python.py
assets/: sounds.toml
src/: app.rs  audio.rs  main.rs  session.rs  static_data.rs  ui.rs
src/app/: download.rs
src/buffered/: mod.rs  source.rs  worker.rs
src/ui/: assets.rs  header.rs  help.rs  main_view.rs
